--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     --roboto-mono: 'Roboto Mono', monospace;
 }
 
+
 body{
     color: var(--branco);
     background-color: var(--cor-de-fundo);
@@ -38,12 +39,15 @@ body{
 }
 
 #campo-senha{
-    background-color: var(--fundo-senha);
-    border: none;
-    color: var(--branco);  
-    font-family: var(--roboto-mono);
-    font-size: 40px;
-}
+    
+        background-color: var(--fundo-senha);
+        border: none;
+        color: var(--branco);
+        font-family: var(--roboto-mono);
+        font-size: 40px;
+        width: 70%;
+    }
+    
 
 #campo-senha:focus{
     outline: none;
@@ -54,8 +58,39 @@ body{
     margin: 0 auto;
 }
 
+.parametro{
+    background-color: var(--fundo-texto);
+    border: 2px solid var(--borda);
+    margin-top: 32px; 
+    padding: 24px;
+}
 
+.parametro-titulo{
+    font-family: var(--roboto-mono);
+    font-size: 28px;
+}
 
+.parametro-senha__titulo{
+    font-size:24px;
+ }   
+    .parametro-coluna__senha{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    @media screen and (min-width: 768px) {
+        .parametro-coluna__senha{
+            flex-direction: row;
+        }
+    }
+    .parametro-senha{
+        width: 50%;
+        margin: 0 auto;
+    }
+    
+    
+    
 
 
 
